# pydnaweb

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  app.py  build_with_pyinstaller.sh  forms.py  pydnaweb (old).py  pydnaweb.py  pyproject.toml  pyproject.toml_  run.sh  start.sh  webpcr.py  webpcr_old.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
old/: app.py
pages/: PCR.py  Restriction digestion.py  restriction digestion.py  seguid calculator.py  web pcr.py
scripts/: untitled0.py
static/: browserconfig.xml  info (copy).md  info.md  site.webmanifest  stylesheet.css
templates/: asmdesign.html  assembly.html  crispr.html  digest.html  docs.html  docs.md  enum.html  fusionpcr.html  gateway.html  index.html  matchingprimer.html  pcr.html  primerdesign.html  repair.html  restrictionligation.html  result.html  seguid.html  tm.html  toggle.html  totab.html  translation.html
templates/static/: stylesheet.css
webui/: __init__.py  webui.py
