[project]
name = "pydnaweb"
version = "0.1.0"
description = "Pydna on the web!"
authors = [
    {name = "BjornFJohansson",email = "bjornjobb@gmail.com"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "streamlit (>=1.41.1,<2.0.0)",
    "pydna @ git+https://github.com/pydna-group/pydna.git@Dseq2"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
